# modelicalint

./: LICENSE  README.md  modelicalint.toml  pyproject.toml
.github/: copilot-instructions.md
modelicalint/: cli.py  context.py  lint.py  message.py
modelicalint/rules/: __init__.py  annotations.py  base.py  connects.py  parameters.py  sections.py  structure.py
